docs: update README.md with new scoring algorithms and RapidOCR setup instructions